[gd_scene load_steps=6 format=3 uid="uid://ddqbiavjpnhw0"]

[ext_resource type="Script" path="res://levels/logic_create.gd" id="1_iyxsh"]
[ext_resource type="Texture2D" uid="uid://dc6oybybe58vg" path="res://icons/logic_create.png" id="2_14ra3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr1kg"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkpjn"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jr38g"]
size = Vector2(22, 22)

[node name="logic_create" type="RigidBody2D"]
position = Vector2(307, -40)
mass = 2.0
can_sleep = false
script = ExtResource("1_iyxsh")
power_push = 200
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_mr1kg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_14ra3")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qkpjn")

[node name="done_area" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="done_area"]
shape = SubResource("RectangleShape2D_qkpjn")

[node name="area_detector_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_detector_player"]
shape = SubResource("RectangleShape2D_jr38g")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="done_area" to="." method="_on_done_area_area_entered"]
[connection signal="body_entered" from="area_detector_player" to="." method="_on_area_detector_player_body_entered"]
[connection signal="body_exited" from="area_detector_player" to="." method="_on_area_detector_player_body_exited"]
